--- a/src/app/components/tickets/tickets.component.scss
+++ b/src/app/components/tickets/tickets.component.scss
@@ -9,7 +9,6 @@
   .tickets {
     display: flex;
     flex: 1;
-    align-items: center;
     justify-content: center;
 
     .full-container {
